Lambda-style structured arenas